# backend/src/routes.ts
@@ -514,6 +514,7 @@ const models: TsoaRoute.Models = {
 				subSchemas: [{ dataType: 'double' }, { dataType: 'enum', enums: [null] }],
 				required: true,
 			},
+			isLive: { dataType: 'boolean', required: true },
 		},
 		additionalProperties: false,
 	},
@@ -638,87 +639,6 @@ const models: TsoaRoute.Models = {
 				dataType: 'union',
 				subSchemas: [{ ref: 'TMatchMode' }, { dataType: 'enum', enums: [null] }],
 			},
-		},
-		additionalProperties: false,
-	},
-	// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-	IMatchResponse: {
-		dataType: 'refObject',
-		properties: {
-			id: { dataType: 'string', required: true },
-			state: { ref: 'TMatchState', required: true },
-			passthrough: {
-				dataType: 'union',
-				subSchemas: [{ dataType: 'string' }, { dataType: 'enum', enums: [null] }],
-				required: true,
-			},
-			mapPool: { dataType: 'array', array: { dataType: 'string' }, required: true },
-			teamA: { ref: 'ITeam', required: true },
-			teamB: { ref: 'ITeam', required: true },
-			electionSteps: {
-				dataType: 'array',
-				array: { dataType: 'refAlias', ref: 'IElectionStep' },
-				required: true,
-			},
-			election: { ref: 'IElection', required: true },
-			gameServer: { ref: 'IGameServer', required: true },
-			logSecret: { dataType: 'string', required: true },
-			parseIncomingLogs: { dataType: 'boolean', required: true },
-			matchMaps: {
-				dataType: 'array',
-				array: { dataType: 'refObject', ref: 'IMatchMap' },
-				required: true,
-			},
-			currentMap: { dataType: 'double', required: true },
-			webhookUrl: {
-				dataType: 'union',
-				subSchemas: [{ dataType: 'string' }, { dataType: 'enum', enums: [null] }],
-				required: true,
-			},
-			webhookHeaders: {
-				dataType: 'nestedObjectLiteral',
-				nestedProperties: {},
-				additionalProperties: { dataType: 'string' },
-				required: true,
-			},
-			rconCommands: {
-				dataType: 'nestedObjectLiteral',
-				nestedProperties: {
-					end: { dataType: 'array', array: { dataType: 'string' }, required: true },
-					match: { dataType: 'array', array: { dataType: 'string' }, required: true },
-					knife: { dataType: 'array', array: { dataType: 'string' }, required: true },
-					init: { dataType: 'array', array: { dataType: 'string' }, required: true },
-				},
-				required: true,
-			},
-			canClinch: { dataType: 'boolean', required: true },
-			matchEndAction: { ref: 'TMatchEndAction', required: true },
-			players: {
-				dataType: 'array',
-				array: { dataType: 'refObject', ref: 'IPlayer' },
-				required: true,
-			},
-			tmtSecret: { dataType: 'string', required: true },
-			isStopped: { dataType: 'boolean', required: true },
-			serverPassword: { dataType: 'string', required: true },
-			tmtLogAddress: {
-				dataType: 'union',
-				subSchemas: [{ dataType: 'string' }, { dataType: 'enum', enums: [null] }],
-				required: true,
-			},
-			createdAt: { dataType: 'double', required: true },
-			lastSavedAt: {
-				dataType: 'union',
-				subSchemas: [{ dataType: 'double' }, { dataType: 'enum', enums: [null] }],
-				required: true,
-			},
-			mode: { ref: 'TMatchMode', required: true },
-			needsAttentionSince: {
-				dataType: 'union',
-				subSchemas: [{ dataType: 'double' }, { dataType: 'enum', enums: [null] }],
-				required: true,
-			},
-			isLive: { dataType: 'boolean', required: true },
 		},
 		additionalProperties: false,
 	},
@@ -1047,7 +967,7 @@ const models: TsoaRoute.Models = {
 				required: true,
 			},
 			type: { dataType: 'enum', enums: ['MATCH_CREATE'], required: true },
-			match: { ref: 'IMatchResponse', required: true },
+			match: { ref: 'IMatch', required: true },
 		},
 		additionalProperties: false,
 	},
